src/test/deca/syntax/invalid/parser/this_as_lvalue.deca
// Description:
//    Affectation de this à un objet de la superclass
//
// Resultats:
//    cast impossible
// 
// Historique:
//    cree le 01/01/2016

class B {
	void m() {
		B b;
		this = b;
	}
}

class A extends B {
}

{

}
